# veil

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
backend/: Cargo.toml  demo.sh  dfx.json  mempool_chess_backend.did  package-lock.json  package.json
backend/src/: auction.rs  bitcoin.rs  bitcoin.rs.disabled  encryption.rs  ethereum.rs  lib.rs  queries.rs  timers.rs  types.rs
backend/tests/: full_encrypted_round.rs  full_vetkd_round.rs  pocketic_full_flow.rs  vetkd_pocketic.rs
backend/vetkeys_engine/: Cargo.toml  dfx.json  vetkeys_engine.did
backend/vetkeys_engine/src/: lib.rs
docs/: architecture.md  doc.md
frontend/: README.md  index.html  package-lock.json  package.json  refer.txt
frontend/frontend/: package.json  tailwind.config.js
frontend/frontend/src/components/: AnimatedBackground.tsx
frontend/frontend/src/components/results/: ClearingPriceReveal.tsx
frontend/frontend/src/components/trading/: OrderForm.tsx
frontend/frontend/src/components/ui/: Input.tsx
frontend/frontend/src/hooks/: useCountdown.ts
frontend/frontend/src/pages/: LandingPage.tsx  ResultsPage.tsx  TradingPage.tsx
frontend/frontend/src/services/: canister.ts
frontend/frontend/src/utils/: vetKeys.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedBackground.tsx  Layout.tsx
frontend/src/components/animations/: RevealAnimation.tsx
frontend/src/components/results/: OrderBreakdown.tsx  UserStatsCard.tsx
frontend/src/components/trading/: EncryptedOrderCard.tsx  OrderForm.tsx  RoundCountdown.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Modal.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: LandingPage.tsx  ResultsPage.tsx  TradingPage.tsx
frontend/src/services/: canister.ts
frontend/src/utils/: mockUsers.ts  walletManager.ts
src/mempool_chess_backend/: Cargo.toml  Cargo.toml.save  mempool_chess_backend.did
src/mempool_chess_backend/src/: auction.rs  lib.rs
src/mempool_chess_frontend/: package.json
src/mempool_chess_frontend/src/: App.jsx
