[package]
name = "mempool_chess_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.18.7"
ic-cdk-timers = "0.12"
ic-stable-structures = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"

# Ethereum
ethers-core = { version = "2.0.14", default-features = false, features = ["legacy"] }
k256 = { version = "0.13.3", default-features = false, features = ["ecdsa"] }
sha3 = "0.10"

# Bitcoin
bitcoin = { version = "0.32", default-features = false }
secp256k1 = { version = "0.29", default-features = false, features = ["alloc", "recovery"] }

# Crypto
getrandom = { version = "0.2", features = ["custom"] }