[package]
name = "mempool_chess_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# These are your existing dependencies
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.18.7"
ic-cdk-timers = "0.12" 
ic-stable-structures = "0.7.2"
serde = { version = "1.0.228", features = ["derive"] }
hex = "0.4"

# --- These are the NEW dependencies for threshold sigs ---

# This is the correct line. 
# "legacy" provides EIP-1559 and automatically includes "rlp".
ethers-core = { version = "2.0.14", default-features = false, features = ["legacy"] }

# These are correct as-is
bitcoin = { version = "0.32.7", default-features = false, features = ["secp-recovery"] }
k256 = { version = "0.13.3", default-features = false, features = ["ecdsa"] }
getrandom = { version = "0.2", features = ["custom"] }
sha3 = "0.10.8"